Add App_data and add logic to store data from api

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     int CalculateValue()
     {
         // Call the API or perform any necessary calculations here
-        // For demonstration purposes, I'll just return a random number
+        // For demonstration, I'll just return a random number
         return new Random().Next(1, 100);
     }
 }
